@@ -1,3 +1,5 @@
+* BUGFIX: Setting gttlvgrep stdin into binary mode under windows.
+* BUGFIX: Putting temp buffer arrays into heap.
 * IMPROVEMENT: Simplified the loading of custom description files.
 * BUGFIX: The search pattern is parsed before gttlvgrep starts parsing input.
 * IMPROVEMENT: Removed size_t defined check.
